Refactor to use API Product Detail V2